# EchoDeck

./: docker-compose.yaml
anki_sync/: pyproject.toml
anki_sync/src/: config.py  main.py
back/: .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
back/migrations/: env.py
back/migrations/versions/: 8bddf63b1a6a_.py  feeed187d447_.py
back/src/: config.py  main.py
back/src/api/: auth.py  card.py  collection.py  deck.py  schedule.py
back/src/api/utils/: decorators.py  depends.py  query_limiter.py
back/src/endpoints/: auth.py  decorators.py  depends.py
back/src/infrastructure/: email.py  password.py
back/src/models/: models.py
back/src/schemas/: card.py  deck.py  user.py
back/src/services/: auth.py  card.py  crud.py  deck.py  jwt.py  password.py  schedule.py  user.py
back/src/services/celery/: tasks.py
back/src/services/rabbit/: email.py
back/src/services/redis/: keys.py  redis.py
back/src/utils/: jwt.py  otp.py  password.py
back/tests/: conftest.py  test_auth.py
back/tests/integration/auth/: test_get_user_create_data.py
back/tests/unit/auth/: test_finish_sign_up.py  test_get_user_create_data.py
email_sender/: pyproject.toml
email_sender/src/: config.py  email_sender.py  exceptions.py  main.py  schemas.py
email_sender/src/templates/: login_confirm_email.txt  read.py  register_attempt.txt  register_confirm_email.txt
email_sender/tests/: test_confirm_email.py  test_simple_email_task.py
email_sender/tests/unit/: test_read.py
front/: package-lock.json  package.json
front/src/: App.tsx  config.ts
front/src/components/: deck.tsx  decks-list.tsx  sign-in.tsx  sign-up.tsx
front/src/pages/: auth.tsx  decks.tsx  home.tsx
front/src/services/api/: auth.ts  deck.ts
front/src/services/schemas/: auth.ts  deck.ts
