[tool.poetry]
name = "anki-sync"
version = "0.1.0"
description = ""
authors = ["Arseni-B <arseniyberdnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
faststream = {extras = ["rabbit"], version = "^0.6.4"}
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
