[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Arseni-B <arseniyberdnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.123.5"
uvicorn = "^0.38.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
