[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Arseni-B <arseniyberdnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.123.5"
uvicorn = "^0.38.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"
bcrypt = "^5.0.0"
pyjwt = "^2.10.1"
asyncpg = "^0.31.0"
python-multipart = "^0.0.20"
alembic = "^1.17.2"
httpx = "^0.28.1"
pytest = "^9.0.1"
pydantic = {extras = ["email"], version = "^2.12.5"}
pytest-asyncio = "^1.3.0"
testcontainers = {extras = ["postgres", "redis"], version = "^4.13.3"}
faststream = {extras = ["rabbit"], version = "^0.6.4"}
fakeredis = "^2.33.0"
pytest-xdist = "^3.8.0"
cryptography = "^46.0.3"
redis = "^7.1.0"
celery = "^5.6.2"


[tool.poetry.group.dev.dependencies]
celery-types = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
