[tool.poetry]
name = "email-sender"
version = "0.1.0"
description = ""
authors = ["Arseni-B <arseniyberdnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic-settings = "^2.12.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
faststream = {extras = ["cli", "rabbit"], version = "^0.6.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
